order-microservice-deployment.yml
apiVersion: v1
kind: Pod
metadata:
  name: order-microservice
  labels:
    app: order-microservice
spec:
  containers:
    - name: order-microservice
      image: classpathio/order-microservice:1.0.0
      imagePullPolicy: IfNotPresent
  restartPolicy: Always
