microservice-deployment.yml
# application configuration for order-microservice application
---
# order microservice
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-microservice
  labels:
    app: order-microservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: order-microservice
  template:
    metadata:
      labels:
        app: order-microservice
    spec:
      containers:
        - name: order-microservice
          image: classpathio/order-microservice:latest
          volumeMounts:
            - name: order-microservice-config
              mountPath: /app/config
              readOnly: true
      volumes:
        - name: order-microservice-config
          configMap:
            name: order-microservice-cm
---
# inventory microservice
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-microservice
  labels:
    app: inventory-microservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: inventory-microservice
  template:
    metadata:
      labels:
        app: inventory-microservice
    spec:
      containers:
        - name: inventory-microservice
          image: classpathio/inventory-microservice:1.0.0
---
# order service

apiVersion: v1
kind: Service
metadata:
  name: order-microservice
spec:
  selector:
    app: order-microservice
  ports:
    - port: 80
      targetPort: 8222
      protocol: TCP
  type: ClusterIP
---
# inventory service
apiVersion: v1
kind: Service
metadata:
  name: inventory-microservice
spec:
  selector:
    app: inventory-microservice
  ports:
    - port: 80
      targetPort: 9222
      protocol: TCP
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: pradeep.ekart.com
      http:
        paths:
          - path: /api/v1/orders
            pathType: Prefix
            backend:
              service:
                name: order-microservice
                port:
                  number: 80
